--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"private": true,
 	"dependencies": {
 		"set-value": ">=2.0.1",
-		"gh-pages": "^2.1.1",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
 		"react-scripts": "2.1.1"
@@ -26,5 +25,8 @@
 		"not dead",
 		"not ie <= 11",
 		"not op_mini all"
-	]
+	],
+	"devDependencies": {
+		"gh-pages": "^2.1.1"
+	}
 }
