--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"homepage": "https://jamesmeier.github.io/react/",
+	"homepage": "https://meiercodes.com/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
